Adicionando imagem e descriçao

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Letícia Branco Galvão</h1>
 
+    <img src="let.jpeg" alt="Foto do usuário" width="100px"><br><br>
+
+    
+
     
 </body>
 </html>
