Adicionando informaçoes do usuario

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     <img src="let.jpeg" alt="Foto do usuário" width="100px"><br><br>
 
-    
+    <p>Estudante de desenvolvimento de software na <strong>Trybe</strong><br>
+        Itú, São Paulo, Brasil<br>
+    <em>Turma 10 - Tribo B de Fevereiro de 2021</em></p>
 
     
 </body>
