Lista de habilidades

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
         Itú, São Paulo, Brasil<br>
     <em>Turma 10 - Tribo B de Fevereiro de 2021</em></p>
 
+    <h4>Habilidades</a></h4>
+
+    <ul>
+        <li><a href="#git">Git e Github</a>></li>
+        <li><a href="#html">HTML</a></li>
+        <li><a href="#css">CSS</a></li>
+        <li><a href="Js">JavaScript</a></li>
+    </ul>
+
     
 </body>
 </html>
