Link externo de um blog

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <li><a href="Js">JavaScript</a></li>
     </ul>
 
+    <h4>Links externos</h4>
+    <a href="https://app.betrybe.com/course/real-life-engineer/vscode#live-server" target="_blank">O VS Code</a>
     
 </body>
 </html>
