Indice com os links internos

--- a/index.html
+++ b/index.html
@@ -7,27 +7,32 @@
     <title>Portfólio Web</title>
 </head>
 <body>
-    <h1>Letícia Branco Galvão</h1>
+    <h1 id="Nome">Letícia Branco Galvão</h1>
 
-    <img src="let.jpeg" alt="Foto do usuário" width="100px"><br><br>
+    <img id="imagem" src="let.jpeg" alt="Foto do usuário" width="100px"><br><br>
 
     <a href="let.jpeg">Ampliar imagem</a>
 
-    <p>Estudante de desenvolvimento de software na <strong>Trybe</strong><br>
+    <p id="descricao" >Estudante de desenvolvimento de software na <strong>Trybe</strong><br>
         Itú, São Paulo, Brasil<br>
     <em>Turma 10 - Tribo B de Fevereiro de 2021</em></p>
 
-    <h4>Habilidades</a></h4>
+    <h4 id="habilidades">Habilidades</a></h4>
 
     <ul>
-        <li><a href="#git">Git e Github</a>></li>
-        <li><a href="#html">HTML</a></li>
-        <li><a href="#css">CSS</a></li>
-        <li><a href="Js">JavaScript</a></li>
+        <li>it e Github</li>
+        <li>>HTML</li>
+        <li>>CSS</li>
+        <li>>JavaScript</li>
     </ul>
 
-    <h4>Links externos</h4>
-    <a href="https://app.betrybe.com/course/real-life-engineer/vscode#live-server" target="_blank">O VS Code</a>
+    <h4 id="linksexternos">Links externos</h4>
+    <a href="https://app.betrybe.com/course/real-life-engineer/vscode#live-server" target="_blank">O VS Code</a><br><br>
     
+    <a href="#nome">Nome</a> 
+    <a href="#imagem">Imagem</a>
+    <a href="#descricao">Descrição</a>
+    <a href="#habilidades">Habilidades</a>
+    <a href="#linksexternos">Links Externos</a>
 </body>
 </html>
