Corrigindo lista de habilidades

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <h4 id="habilidades">Habilidades</a></h4>
 
     <ul>
-        <li>it e Github</li>
-        <li>>HTML</li>
-        <li>>CSS</li>
-        <li>>JavaScript</li>
+        <li>Curiosidade</li>
+        <li>Resilência</li>
+        <li>Empatia</li>
+        <li>Dedicação</li>
     </ul>
 
     <h4 id="linksexternos">Links externos</h4>
