--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Web</title>
+    <style>
+
+        h1 {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            }
+
+        p {
+            font-family: Gill Sans, sans-serif
+            }
+
+        body {
+            background-color: #FFCDB2;
+        }
+
+
+    </style>
 </head>
 <body>
     <h1 id="Nome">Letícia Branco Galvão</h1>
