Adicionando Scroll-behavior

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
             .social_media{
                 padding: 10px;
             }
+
+            html {
+                scroll-behavior: smooth;
+                } 
         
         </style>
     </head>
