Colocando cor de fundo na foto e estilo aos itens impares das listas

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <h4 id="habilidades">Habilidades</a></h4>
 
-        <ul>
+        <ul class="lists">
             <li>Curiosidade</li>
             <li>Resilência</li>
             <li>Empatia</li>
@@ -51,7 +51,7 @@
 
         <h4 id="skills">Skills</h4>
 
-        <ul>
+        <ul class="lists">
             <li>Unix e Shell</li>
             <li>Git e Github</li>
             <li>HTML</li>
