Colocando as skills em divs lado a lado

--- a/index.html
+++ b/index.html
@@ -41,37 +41,41 @@
 
         </div>
         <hr>
+        <div class="header-content">
+            <div class="content">
+                <h4 id="soft-skills">Soft Skills</a></h4>
 
-        <div>
-            <h4 id="soft-skills">Soft Skills</a></h4>
+                <ul>
+                    <li>Curiosidade</li>
+                    <li>Resilência</li>
+                    <li>Empatia</li>
+                    <li>Dedicação</li>
+                </ul>
+            </div>
 
-            <ul class="lists">
-                <li>Curiosidade</li>
-                <li>Resilência</li>
-                <li>Empatia</li>
-                <li>Dedicação</li>
-            </ul>
+            <div class="content">
+                <h4 id="hard-skills">Hard Skills</a></h4>
+                <ul>
+                    <li>Unix e Shell</li>
+                    <li>Git e Github</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                </ul>
+            </div>
 
-            <h4 id="hard-skills">Hard Skills</h4>
-
-            <ul class="lists">
-                <li>Unix e Shell</li>
-                <li>Git e Github</li>
-                <li>HTML</li>
-                <li>CSS</li>
-            </ul>
-
-            <h4 id="blogs">Blogs</h4>
-
-            <ul class="lists">
-                <li><a href="https://app.betrybe.com/course/real-life-engineer/vscode#live-server" 
-                target="_blank">O VS Code</a></li>
-                <li><a href="https://elascodam.wordpress.com/home/" target="_blank">Elas Codam</a></li>
-            </ul>
-        
+            <div class="content">
+                <h4 id="blogs">Blogs</h4>
+                <ul>
+                    <li><a href="https://app.betrybe.com/course/real-life-engineer/vscode#live-server" 
+                    target="_blank">O VS Code</a></li>
+                    <li><a href="https://elascodam.wordpress.com/home/" target="_blank">Elas Codam</a></li>
+                </ul>
+            </div>
         </div>
-        
+        <hr>
+
         <div class="social_media">
+
             <a  href="https://www.linkedin.com/in/leticia-galvao/" target="_blank">
                 <img src="logotipo-do-linkedin.png" alt="Logotipo linkedin" width="60px">           
             </a>
