Atualizando quem sou eu, removendo estilo da lista

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             <div class="profile">
                 <p id="descricao" >Estudante de desenvolvimento de software na <a class="trybe" href="https://www.betrybe.com/">Trybe</a> |
                     <em>Turma 10 - Tribo B de Fevereiro de 2021</em><br> Graduada em gestão financeira, Residente de 
-                    <strong>Itú, São Paulo, Brasil</strong> em constante evolução e buscando sempre entender
-                    as coisas <br> funcionam e como posso ajudar a melhorar a qualidade de vida das pessoas com esses conhecimentos.
+                    <strong>Itú, São Paulo, Brasil</strong>. Curiosa por natureza, busco sempre por aprender a funcionalidade das coisas aprimorando meus conhecimentos sejam por filmes, livros, cursos e principalmente com o trabalho de outras pessoas que já viveram o momento em que estou.
                 </p>
             </div>
 
@@ -72,6 +71,7 @@
                 </ul>
             </div>
         </div>
+        
         <hr>
 
         <div class="social_media">
