Modificando layout das skills em forma de card

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a class="buttom" href="#descricao" >Quem sou</a>
             <a class="buttom" href="#soft-skills">Soft Skills</a>
             <a class="buttom" href="#hard-skills">Hard Skills</a>
-            <a class="buttom" href="#blogs">Blogs</a>
+            <a class="buttom" href="#projects">Projetos</a>
         </p>
     </div>
         
@@ -63,11 +63,11 @@
             </div>
 
             <div class="content">
-                <h4 id="blogs">Blogs</h4>
+                <h4 id="projects">Projetos</h4>
                 <ul>
-                    <li><a href="https://app.betrybe.com/course/real-life-engineer/vscode#live-server" 
-                    target="_blank">O VS Code</a></li>
-                    <li><a href="https://elascodam.wordpress.com/home/" target="_blank">Elas Codam</a></li>
+                    <li><a href=""target="_blank">Lessons Learned</a></li>
+                    <li><a href="" target="_blank">Paleta de Cores</a></li>
+                    <li><a href="" target="_blank">Todo List</a></li>
                 </ul>
             </div>
         </div>
