Adicionando os projetos realizados ao portfolio

--- a/index.html
+++ b/index.html
@@ -58,15 +58,16 @@
             <li>Git e Github</li>
             <li>HTML</li>
             <li>CSS</li>
+            <li>JavaScript</li>
           </ul>
         </div>
 
         <div class="content">
             <h4 id="projects">Projetos</h4>
             <ul>
-                <li><a href=""target="_blank">Lessons Learned</a></li>
-                <li><a href="" target="_blank">Paleta de Cores</a></li>
-                <li><a href="" target="_blank">Todo List</a></li>
+                <li><a href="Projetos/lessons-learned/index.html"target="_blank">Lessons Learned</a></li>
+                <li><a href="Projetos/pixels-art/index.html" target="_blank">Paleta de Cores</a></li>
+                <li><a href="Projetos/todo-list/index.html" target="_blank">Todo List</a></li>
             </ul>
         </div>
       </div>
